--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ p{
 .row{
     margin-top: 5%;
     display: flex;
-    justify-content: space-between;
+    justify-content:space-evenly;
 }
 
 .course-col{
@@ -289,10 +289,70 @@ h3{
 }
 
 .beginner{
-    width: 80%;
+    width: 70%;
     margin: auto;
-    padding-top: 80px;
-    padding-bottom: 50px;
+    padding-top: 60px;
+    padding-bottom: 10px;}
+.beginner1{
+    width: 70%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 10px;}
+.beginner2{
+    width: 70%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 10px;}
+.beginner3{
+    width: 70%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 10px;
+}
+.beginner4{
+    width: 70%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 10px;
+}
+.beginner5{
+    width: 70%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 10px;
+}
+.beginner6{
+    width: 70%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 10px;
+}
+.beginner7{
+    width: 70%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 10px;
+}
+.beginner8{
+    width: 70%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 10px;
+
+}
+.beginner9{
+    width: 70%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 80px;
+
+}
+.beginner10{
+    width: 70%;
+    margin: auto;
+    padding-top: 60px;
+    padding-bottom: 600px;
+
 }
 .beginner-col{
     flex-basis: 48%;
